--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
   </head>
   <body>
     <h1>Hello Full stack army</h1>
+    <!-- for development -->
+    <h1>this is development branch</h1>
   </body>
 </html>
