update on development

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>Hello Full stack army</h1>
-    <!-- for development -->
-    <h1>this is development branch</h1>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body>
+  <h1>Hello Full stack army</h1>
+
+  <!-- ruhan branch -->
+  <h1>This is Robiuzzaman Ruhan Here</h1>
+</body>
+
 </html>
+
