--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <!-- for development -->
     <h1>this is development branch</h1>
 
-    <h2>Hello From Md Nurulah Bhuiyan</h2>
+    <!-- style added-->
+    <h2 class="nurullah">Hello From Md Nurulah Bhuiyan</h2>
     <p>Checkging pull</p>
   </body>
 </html>
