--- a/about.html
+++ b/about.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>This is about page</h1>
-    <p>About Company</p>
+    <p>About Company. Xoss ekta company. Dinner Free</p>
   </body>
 </html>
