Nurullah commit korce

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
     <!-- style added-->
     <h2 class="nurullah">Hello From Md Nurulah Bhuiyan</h2>
-    <p>Checkging pull</p>
+    <p>Checking pull</p>
+    <!-- Abar add korteci -->
+    <h1>Nurullah abar check kore dekhce.. mone khayesh hoice tai karon jhankar vai bolce khayesh thakle kore dekho</h1>
+
   </body>
 </html>
