--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
     <h1>
       আলিম ভাই আপ্নি আমার কোড ডিলিট করে দিয়া কাজটা কিন্ত ভালো করেন নাই!
     </h1>
+
+    <!-- js file link -->
+    <script src="script.js"></script>
   </body>
 </html>
