--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Document</title>
   </head>
 
@@ -19,10 +19,15 @@
     <h2 class="nurullah">Hello From Md Nurulah Bhuiyan</h2>
     <p>Checking pull</p>
     <!-- Abar add korteci -->
-    <h1>Nurullah abar check kore dekhce.. mone khayesh hoice tai karon jhankar vai bolce khayesh thakle kore dekho</h1>
+    <h1>
+      Nurullah abar check kore dekhce.. mone khayesh hoice tai karon jhankar vai
+      bolce khayesh thakle kore dekho
+    </h1>
 
     <!-- new commit from 'ruhan' branch -->
     <h1>আলিম ভাই আপ্নি আমার কোড ডিলিট করে দিয়া কাজটা কিন্ত ভালো করেন নাই!</h1>
+    <!-- new commit from 'mehedi hasan chanchal' branch -->
+    <h1>Hi i am chanchal</h1>
     <!-- mahadi branch -->
     <h2>This is mahadi code done</h2>
   </body>
