mahadi added a line

--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
     <h1>আলিম ভাই আপ্নি আমার কোড ডিলিট করে দিয়া কাজটা কিন্ত ভালো করেন নাই!</h1>
     <!-- mahadi branch -->
     <h2>This is mahadi code done</h2>
+
+    <!-- new code pusing on 28 june -->
+    <h3>Today is rainy day.</h3>
   </body>
 </html>
