--- a/index.html
+++ b/index.html
@@ -1,42 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>Hello Full stack army</h1>
+    <p>I am abdul alim.</p>
+    <!-- for development -->
+    <h1>this is development branch</h1>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles/style.css" />
-  <title>Document</title>
-</head>
+    <!-- comment from ruhan -->
+    <h1>Hello there Ruhan!</h1>
 
-<body>
-  <h1>Hello Full stack army</h1>
-  <p>I am abdul alim. and want to solve. But how</p>
-  <p>I am trying to making conflict.</p>
-  <h1>I am pushing pushing and pushing....</h1>
-  <!-- for development -->
-  <h1>this is development branch</h1>
-  <h1>this is new line from Faysal Ahmed</h1>
-  <h1>why this is why??</h1>
+    <h2>Hello From Md Nurulah Bhuiyan</h2>
+    <p>Checkging pull</p>
 
-  <!-- style added-->
-  <h2 class="nurullah">Hello From Md Nurulah Bhuiyan</h2>
-  <p>Checking pull</p>
-  <!-- Abar add korteci -->
-  <h1>
-    Nurullah abar check kore dekhce.. mone khayesh hoice tai karon jhankar vai
-    bolce khayesh thakle kore dekho
-  </h1>
 
-  <!-- new commit from 'ruhan' branch -->
-  <h1>আলিম ভাই আপ্নি আমার কোড ডিলিট করে দিয়া কাজটা কিন্ত ভালো করেন নাই!</h1>
-  <h1>Another code from Ruhan</h1>
-  <!-- new commit from 'mehedi hasan chanchal' branch -->
-  <h1>Hi i am chanchal</h1>
-  <!-- mahadi branch -->
-  <h2>This is mahadi code done</h2>
-
-  <!-- new code pusing on 28 june -->
-  <h3>Today is rainy day.</h3>
-</body>
-
+  </body>
 </html>
+
