--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <h1>By the way,i am a football lover</h1>
     <!-- mahadi branch -->
     <h2>This is mahadi code done. are you chancal vai??</h2>
+    <p>this is the cold</p>
 
     <!-- new code pusing on 28 june -->
     <h3>Today is rainy day.</h3>
